# VkExamples

./: CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  conanfile.txt
HelloColorTriangle/: CMakeLists.txt  main.cpp
HelloColorTriangle/Shaders/: Shader.vert  compile.sh
HelloCube/: CMakeLists.txt  Mesh.dae  main.cpp  untitled.dae
HelloCube/Shaders/: Shader.frag  Shader.vert  compile.sh
HelloCubeCamera/: CMakeLists.txt  README.md  main.cpp
HelloCubeCamera/.cache/clangd/index/: main.cpp.40286C2C10EB12BF.idx
HelloCubeCamera/Shaders/: compile.sh
HelloHPP/: CMakeLists.txt  CMakeUserPresets.json  Shader.frag  Shader.vert  conanfile.txt  main.cpp
HelloLit/: CMakeLists.txt  Mesh.dae  Previous.cpp  README.md  main.cpp  main.h
HelloLit/Shaders/: Shader.frag  Shader.vert  compile.sh
HelloTexturedCube/: CMakeLists.txt  Mesh.dae  README.md  main.cpp
HelloTexturedCube/Shaders/: Shader.frag
HelloTextures/: CMakeLists.txt  Mesh.dae  main.cpp
HelloTextures/Shaders/: Shader.vert  compile.sh
HelloTriangle/: CMakeLists.txt  README.md  main.cpp
HelloTriangle/.cache/clangd/index/: main.cpp.29CB33B324A11728.idx
HelloTriangle/Shaders/: Shader.frag  Shader.vert  compile.sh
HelloUI/: CMakeLists.txt  Mesh.dae  README.md  Renderer.cpp  Renderer.h  UI.cpp  UI.hpp  main.cpp  main.h  vkui.h
HelloUI/Shaders/: CMakeLists.txt  CharFrag.glsl  CharVert.glsl  CurveFrag.glsl  CurveVert.glsl  RectFrag.glsl  RectVert.glsl
HelloUI/UI/: Primitives.cpp  Primitives.hpp  UI.cpp  UI.hpp  Widgets.cpp  Widgets.hpp
